static/assets/css/alpine.css
article.post {
	margin-top: 20px;
}

form#search {
	display: none;
}

blockquote {
  	margin-top: 15px;
}

#wrapper {
  max-width: 700px;
  padding-top: 40px;
}

.profile #wrapper {
	padding-top: 50px;
	padding-bottom: 30px;
}

#post-meta {
	display: none;
}

article ol li {
	list-style-type: decimal;
}  

article ul li {
	list-style-type: disc;
}

.post-body ul li {
	list-style-type: disc !important;
}

video {
  max-width: 100%;
}

pre {
  margin-top: 15px;
}

.microblog_conversation {
	margin-top: 50px;
	padding-top: 20px;
	border-top: 1px solid lightgray;
}

.microblog_post {
	padding-top: 20px;
	padding-bottom: 20px;
}

.microblog_avatar {
	border-radius: 10px;
	vertical-align: top;
	padding: 0px;
}

.microblog_text {
  margin-top: 1em;
}

.microblog_time {
	font-size: 13px;
	padding-top: 10px;
	color: gray;
}

.microblog_time a {
	color: gray;
    text-decoration: none;
}

.bookshelf_book {
  padding-bottom: 7px;
}

.bookshelf_book img {
	margin-right: 3px;
}

.bookshelf_title {
  font-weight: 500;
}

nav.main-nav a, #footer a, #post-nav a, p a {
	box-shadow: inset 0 -2px 0 #DEDEDE;
}

nav.main-nav a:hover, #footer a:hover, #post-nav a:hover, p a:hover {
	box-shadow: inset 0 -25px 0 #EFEFEF;
}

.site-menus {
	float: right;
}

nav.main-nav {
	text-align: left;
}

.bookshelf_book img {
  padding-top: 0px;
}

.subscribe_form input[type="text"] {
  margin-top: 20px;
  height: 28px;
  border: 1px solid #DEDEDE;
  padding-left: 5px;
  padding-right: 5px;
}

.subscribe_form input[type="submit"] {
  height: 28px;
  border-radius: 14px;
  border: 1px solid #DEDEDE;
  background-color: #EFEFEF;
  padding-left: 15px;
  padding-right: 15px;
}

.quoteback-container {
  margin-top: 15px !important;
}

.gist-file {
  margin-top: 15px;
}

.gist-meta {
  display: none;
}

.site-title {
	display: inline-block;
	font-size: 14px;
	font-weight: 500;
	line-height: 1.35;
	padding-left: 5px;
	margin-top: 0px;
	margin-bottom: 5px;
	padding-top: 5px;
	padding-bottom: 5px;
}

.site-title a {
	vertical-align: top;
	margin-left: 5px;
}

.site-image {
	display: inline-block;
	width: 26px;
	border-radius: 13px;
	margin-top: -5px;
}

@media only screen and (max-width: 750px) {

  .site-menus {
	  float: none;
  }

}

@media (prefers-color-scheme: dark) {

	p a {
	  text-decoration: underline;
	}

	.site-title {
		margin-left: 30px;
	}
  
}

